--- a/package.json
+++ b/package.json
@@ -22,5 +22,22 @@
   },
   "dependencies": {
     "commander": "^14.0.3"
+  },
+  "devDependencies": {
+    "@eslint/eslintrc": "^3.3.1",
+    "@eslint/js": "^9.34.0",
+    "@jest/globals": "^30.0.5",
+    "@stylistic/eslint-plugin": "^5.2.3",
+    "eslint": "^9.34.0",
+    "eslint-plugin-import": "^2.32.0",
+    "globals": "^16.3.0",
+    "jest": "^30.0.5",
+    "lint-staged": "^16.1.5",
+    "npm-check-updates": "^18.0.2",
+    "release-it": "^19.0.4",
+    "simple-git-hooks": "^2.13.1"
+  },
+  "lint-staged": {
+    "*.js": "eslint --fix"
   }
 }
