--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "code": "bin/gendif.js"
   },
   "scripts": {
+    "gendiff": "node bin/gendif.js",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage"
