--- a/package.json
+++ b/package.json
@@ -15,13 +15,13 @@
   "type": "module",
   "main": "index.js",
   "bin": {
-    "code": "bin/gendif.js"
+    "code": "bin/gendiff.js"
   },
   "bin": {
-    "gendiff": "node bin/gendif.js"
+    "gendiff": "node bin/gendiff.js"
   },
   "scripts": {
-    "gendiff": "node bin/gendif.js",
+    "gendiff": "node bin/gendiff.js",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage"
