--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "license": "ISC",
   "author": "",
   "type": "module",
-  "main": "index.js",
+  "main": "bin/gendiff.js",
   "bin": {
     "code": "bin/gendiff.js",
     "gendiff": "bin/gendiff.js",
